--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,6 +6,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
+
+    <ion-buttons end>
+        <button ion-button (click)="logout()">
+          <ion-icon name="exit"></ion-icon>
+        </button>
+      </ion-buttons>
   </ion-navbar>
 </ion-header>
 
