--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,6 +8,9 @@
     </button>
 
     <ion-buttons end>
+        <button ion-button (click)="goToAddItemPage()">
+          <ion-icon name="add"></ion-icon>
+        </button>
         <button ion-button (click)="logout()">
           <ion-icon name="exit"></ion-icon>
         </button>
