Added status for items
+ Added Status boolean for true / false if it's finished or not with checkmark to show if it's disabled or not via [disabled] tag. If not show like normal: Theory & details in comments in the code
--------
TODO: Modify, so the button doesn't go into details (since atm the whole item is selected for that method. But the rest will send it to details

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,7 +21,22 @@
 <ion-content padding>
   <ion-list inset>
     <button ion-item *ngFor="let item of items | async" (click)="itemSelected(item)">
-      {{ item.title }}
+      <ion-label>
+        <!-- Currently add done to tag if it's true, false then nothing (option 2) -->
+          {{ item.title }} {{ item.status ? '(done)' : '' }}
+      </ion-label>
+      <!-- TODO:: Change so you don't go into details when button is clicked -->
+
+      <!-- As long as status is false, you can click the button to start the method finishToDo(item)-->
+      <!-- If the item has the item.status as true (then the disabled tag will be activated) which makes the button faded visually and unclickable. (short answer) -->
+
+      <!-- Theory: https://angular.io/guide/template-syntax#a-new-mental-model for the Angular Binding of HTML tags as it got the "disabled"=false by default, so binding it to item.status will
+      turn "disabled"= true when status of item.status = true. So the property of disabled follows the status of item.status due to the binding. Therefore, if we in any way change item.status back to false
+      the "disabled" will follow and be "false" again too -->
+      <button ion-button item-end [disabled]="item.status" (click)="finishToDo(item)">
+        <ion-icon name="checkmark"></ion-icon>
+      </button>
+
     </button> 
   </ion-list>
 </ion-content>
