--- a/src/pages/detail/detail.html
+++ b/src/pages/detail/detail.html
@@ -24,7 +24,7 @@
       </ion-card>
 
     <ion-card>
-        <button ion-button outline icon-start [disabled]="true">
+        <button ion-button outline icon-start (click)="updateItem()">
           <ion-icon name="hammer"></ion-icon>
             Edit
         </button>
