Some style changes and test

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      ToDo-List
     </ion-title>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
