--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,11 +18,11 @@
     <ion-col>
       <ion-row>
         <ion-label fixed>Username: </ion-label>
-        <ion-input type="text" [(ngModel)]="user.username"></ion-input>
+        <ion-input class="input-style" type="text" [(ngModel)]="user.username"></ion-input>
       </ion-row>
       <ion-row>
         <ion-label fixed>Password: </ion-label>
-        <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+        <ion-input class="input-style" type="password" [(ngModel)]="user.password"></ion-input>
       </ion-row>
 
       <ion-row>
